# csf-tcr-mimicry-discovery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_GOVERNANCE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  data_issue.yml  feature_request.yml
.github/workflows/: ci.yml
config/: config.yaml  samples.tsv
containers/singularity/: build_sif.sh
data/test/: README.md  synthetic_neoantigens.tsv  synthetic_tcr_clonotypes.csv
docs/: model_card.md  roadmap.md
mimicry_discovery/: __init__.py  cli.py  config.py
mimicry_discovery/io/: __init__.py  hla_sequences.py  hla_typing.py  neoantigen_parsers.py  tcr_parsers.py
mimicry_discovery/lineage/: __init__.py  provenance.py
mimicry_discovery/scoring/: __init__.py  calibration.py  features.py  risk_model.py
mimicry_discovery/self_antigen/: __init__.py  build_reference.py  query.py
mimicry_discovery/structure/: __init__.py  af_multimer_adapter.py  base.py  esmfold_adapter.py  interface_metrics.py  tcrdock_adapter.py
scripts/: download_reference_data.sh  seed_github_project.sh  submit_cloud.sh  submit_slurm.sh
tests/: conftest.py
tests/integration/: test_pipeline_end_to_end.py
tests/unit/: test_calibration.py  test_esmfold_adapter.py  test_features.py  test_hla_sequences.py  test_hla_typing.py  test_interface_metrics.py  test_neoantigen_parsers.py  test_risk_model.py  test_structure_base.py  test_stubs.py  test_tcr_parsers.py  test_tcrdock_adapter.py  test_workflow_scripts.py
workflow/: Snakefile
workflow/envs/: scoring.yaml  structure_prediction.yaml  tcr_qc.yaml
workflow/report/: workflow.rst
workflow/rules/: 01_ingest_qc.smk  02_candidate_pairing.smk  03_structure_prediction.smk  (+2 more)
(+8 files in other folders)
