[project]
name = "mimicry-discovery"
version = "0.1.0"
description = "Structure-based TCR-pMHC modeling to detect tumor-neuronal molecular mimicry in seronegative paraneoplastic neurodegeneration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pandas-stubs",
    "types-PyYAML",
]
# TODO(scoring): add biopython>=1.83 here if/when
# mimicry_discovery.scoring.features.peptide_similarity is upgraded from
# the property-group heuristic to a real BLOSUM62 substitution matrix.

[project.scripts]
mimicry-discovery = "mimicry_discovery.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Without this, setuptools' flat-layout auto-discovery sees data/, config/,
# and containers/ as sibling top-level directories and refuses to guess
# which one is the actual package -- this restricts discovery to
# mimicry_discovery and its subpackages only.
include = ["mimicry_discovery*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
